--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
         }
     ],
     "autoload": {
-        "psr-4": {
-            "BrainGames\\Cli\\": "src"
-        }
-    },
+        "files": ["src/Cli.php"]
+        },
     "require": {}
 }
