--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,11 @@
         },
     "require": {
         "wp-cli/php-cli-tools": "0.11.*"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "3.*"
+    },
+    "scripts": {
+        "phpcs": "phpcs"
     }
 }
