--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "godedok/php-brain-games",
     "bin": [
-        "bin/brain-games"
+        "bin/brain-games",
+        "bin/brain-even"
     ],
     "license": "MIT",
     "type": "project",
@@ -15,7 +16,10 @@
         }
     ],
     "autoload": {
-        "files": ["src/Cli.php"]
+        "files": [
+            "src/Cli.php",
+            "src/games/even.php"
+        ]
         },
     "require": {
         "wp-cli/php-cli-tools": "0.11.*"
