--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "godedok/php-brain-games",
     "bin": [
         "bin/brain-games",
-        "bin/brain-even"
+        "bin/brain-even",
+        "bin/brain-calc"
     ],
     "license": "MIT",
     "type": "project",
@@ -18,7 +19,8 @@
     "autoload": {
         "files": [
             "src/Cli.php",
-            "src/games/even.php"
+            "src/games/even.php",
+            "src/games/calc.php"
         ]
         },
     "require": {
