--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
         "bin/brain-games",
         "bin/brain-even",
         "bin/brain-calc",
-        "bin/brain-gcd"
+        "bin/brain-gcd",
+        "bin/brain-balance"
     ],
     "license": "MIT",
     "type": "project",
@@ -23,7 +24,8 @@
             "src/games/even.php",
             "src/games/calc.php",
             "src/test.php",
-            "src/games/gcd.php"
+            "src/games/gcd.php",
+            "src/games/balance.php"
         ]
         },
     "require": {
